--- a/uuid/src/main/resources/application.properties
+++ b/uuid/src/main/resources/application.properties
@@ -6,3 +6,4 @@ org.ict.PREFIX_LENGTH=10
 org.ict.MANUFACTURER_ID_LENGTH=6
 org.ict.PRODUCT_ID_LENGTH=6
 org.ict.USER_KEY_LENGTH=20
+org.ict.CHECK_LENGTH=16
