--- a/guid/src/main/resources/application.properties
+++ b/guid/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=1026
-spring.application.name=SERVICE-UUID
+spring.application.name=SERVICE-GUID
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
 eureka.client.service-url.defaultZone=http://localhost:1025/eureka
