--- a/guid/pom.xml
+++ b/guid/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.ict</groupId>
-    <artifactId>uuid</artifactId>
+    <artifactId>guid</artifactId>
     <version>1.0-SNAPSHOT</version>
     <parent>
         <groupId>org.springframework.boot</groupId>
